- #6921 Handling pre-main window creation status notifications
- #6922 macOS CI build
- #6927 Text copied and pasted between Windows and Mac OS converts to japanese
- #6936 Application loses settings
- #6939 Update pipelines to use correct credentials
- #6942 All the text in all the windows should have the same font and size
- #6944 Systray icon is incorrect for macOS Big Sur
- #6945 Fix build for Raspberry Pi

Enhancements:
- #6912 Removes UI for Screen Saver Sync and Files Drag and Drop
- #6909 Document CLI Arguments
- #6916 Main Window receives screen name change
- #6910 Don't use the word “Version” for release names because it can lead to errors during update checking.
- #6918 Removing positional union initialisation
- #6931 Update build pipeline to support macOS 10.13
- #6937 Modern C++ compiler for centOS7
- #6938 Remove auto config message from the main window
- #6941 Add Raspberry Pi Builds

v1.13.0-stable
===========
Bug fixes:
- #6858 Application is blurry and unfocused on macOS
- #6872 Check for dns_sd.h only when building GUI
- #6874 The logo on Windows taskbar is incorrect.
- #6879 Update macOS installer drive icons
- #6878 Update googletest library to latest version
- #6882 Build macOS using qt 5.15.2 and avoid using brew for build
- #6884 Fix logo for Linux and dark logo for macOS
- #6886 Update Welcome screen

Enhancements:
- #6867 Create only 1 artefact for macOS
- #6885 Make build for every merge to master

v1.13.0-rc2
===========
Bug fixes:
- #6831 Incorporating Sonar's major
- #6837 Memory leaks on macOS system
- #6838 Enterprise asks for serial key on Linux system
- #6849 Auto-hide resets itself
- #6846 TLS certificate is not created by default for Synergy Enterprise.
- #6859 Systray Icon on Ubuntu Auto Start
- #6863 Adding MacOS CI Build Steps for Homebrew Cleanup

Enhancements:
- #6836 Enabling Github Code Scanning
- #6841 Windows installer has been updated.
- #6844 macOS installer has been updated.
- #6860 About Synergy logo refreshed